[gd_scene load_steps=5 format=3 uid="uid://dspf2fl83hrca"]

[ext_resource type="Script" path="res://Menu/NameEntry.gd" id="1_pmkay"]
[ext_resource type="Texture2D" uid="uid://b8fvd1kce6b7c" path="res://Menu/bglogin.png" id="1_u45ep"]
[ext_resource type="AudioStream" uid="uid://dou4cukntbilo" path="res://sound/premenu.wav" id="3_xm68a"]

[sub_resource type="LabelSettings" id="LabelSettings_d3wyo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmkay")

[node name="BgName" type="NinePatchRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.5
offset_top = -122.0
offset_right = 163.5
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_u45ep")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="NameLabel" type="Label" parent="BgName"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 38.0
offset_right = 77.5
offset_bottom = 64.0
grow_horizontal = 2
text = "What is your Name?"
label_settings = SubResource("LabelSettings_d3wyo")

[node name="NameBox" type="LineEdit" parent="BgName"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -17.0
offset_right = 107.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="BgName"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.5
offset_top = -83.0
offset_right = 31.5
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
text = "Submit"

[node name="Pre" type="AudioStreamPlayer" parent="."]
process_mode = 4
stream = ExtResource("3_xm68a")
autoplay = true

[connection signal="text_submitted" from="BgName/NameBox" to="." method="_on_name_box_text_submitted"]
[connection signal="pressed" from="BgName/Button" to="." method="_onSubmit"]
